Prevent top bar from overlapping header

--- a/app/styles/header.styl
+++ b/app/styles/header.styl
@@ -3,7 +3,7 @@ header
 
   .row
     position: relative
-    padding: 20px 0
+    padding: 35px 0 20px
     z-index: 4
 
     .pull-right
@@ -18,7 +18,7 @@ header
 
       img
         position: absolute
-        top: 17px
+        top: 32px
 
     .menu
       cursor: pointer
